# gallery

./: ._config.yml  ._toc.yml.bak  .gitignore  .readthedocs.yml  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  README.md  _config.yml  myst.yml  pyproject.toml
.binder/: environment.yml
.github/: dependabot.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  extra.md  getting_started.md  index.md  installation.md  intro.md
doc/examples/: example1.ipynb  example2.ipynb
doc/integrated/: integrated2.md
doc/overview/: get_started.md  notebooks.ipynb
doc/overview/notebooks/: second.ipynb
doc/package/hydroroot/: example_archi_from_rsml.ipynb  hydroroot.md  hydroroot_notebook.ipynb  hydroroot_notebook2.ipynb
doc/package/hydroroot/data/: maize_3P2.rsml
doc/package/phenomenal/: phenomenal.md
doc/reference/: references.bib
integrated/: integrated.md
overview/: get_started.md  markdown-notebooks.md
overview/notebooks/: first.ipynb
package/hydroroot/: hydroroot.md
package/phenomenal/: phenomenal_notebook.ipynb  phenomenal_notebook2.ipynb
src/openalea/gallery_wralea/: __init__.py
test/: test_gallery.py
vclimb/: README.md  config.yaml
