[project]
name = "openalea.gallery"
authors = [
  { name = "openalea" },
]
description = "Gallery notebooks for OpenAlea"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/openalea/gallery"
Homepage = "https://gallery.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/gallery/issues"
Discussions = "https://github.com/openalea/gallery/discussions"
Changelog = "https://github.com/openalea/gallery/releases"

[tool.pixi.project]
name = "openalea-gallery"
channels = ["openalea3/label/dev", "conda-forge"]
platforms = ["osx-64", "linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.13"
"openalea.plantgl" = ">=3.21.2.dev,<4"
"openalea.lpy" = ">=3.14.2.dev,<4"
"openalea.caribu" = ">=8.1.4.dev,<9"
"openalea.hydroroot" = ">=2.0.1.dev,<3"
"openalea.phenomenal" = ">=1.10.3.dev,<2"
"openalea.oalab" = ">=2.4.2.dev,<3"
oawidgets = ">=1.0.6.dev,<2"
"openalea.mtg" = ">=2.2.1.dev,<3"
jupyterlab = ">=4.4.7,<5"
jupyter-book = ">=1.0.4.post1,<2"

[tool.pixi.tasks]
build_gallery = "jupyter-book build ."
run = "jupyter lab --LabApp.default_url='/lab/tree/overview/notebooks.ipynb"

